[package]
name = "rocket_blog"
version = "0.1.0"
authors = ["Rasmus Ansin <rasmus.ansin@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rocket = "0.3.10"
rocket_codegen = "0.3.10"
rocket_cors = "0.2.3"

diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

